force-app/main/default/objects/Vehicle_Showroom__c/Vehicle_Showroom__c.object-meta.xml
<CustomObject>
    <label>Vehicle Showroom</label>
    <nameField>
        <label>Vehicle Showroom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Showroom</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>