force-app/main/default/objects/Vehicle_Showroom__c/fields/CarShowrooms__c.field-meta.xml
<CustomField>
    <fullName>CarShowrooms__c</fullName>
    <label>CarShowroom</label>
    <referenceTo>Showroom__c</referenceTo>
    <relationshipName>Vehicle_Showroom_Juction_Objects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>