force-app/main/default/objects/Vehicle_Showroom__c/fields/Is_available_in_showroom__c.field-meta.xml
<CustomField>
    <fullName>Is_available_in_showroom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is available in showroom</label>
    <type>Checkbox</type>
</CustomField>