force-app/main/default/objects/Vehicle_Showroom__c/fields/Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Vehicles__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipName>Vehicle_Showroom_Juction_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>